package com.backend.logs_analyser.userProfile;

public class LogEvent {
    public String timestamp;
    public String event;
    public int id;     

}