package com.backend.logs_analyser.userProfile.generator;

public interface IGenerator {

    void generate();

}