' Generated by UML Generator
' Encoded: pLTRRzem57xFh_1ZEaYrvwf3PS1Q9AOYAAhsX4pY1ciXHhRJQhV-zlauCVWIKXusRIz8ETVlVESSszm8YRciTaKalj9oZpdUeRJ0GWobv7HJIJ9DMRcatmbw7srfHb1AULgGAD9MQ2K8dtFsH0k2VaG89PKIJBChD6Db3j_acPHIg6ygvFMCvHFu7g0Fg2GlQCWv_gOrW_W2h74gAIj7hD8-d_7-UgbWb7aVJKj9SiADvnqMMr0tVedwwLbOOWrZNCC0YrvEv4f3YoyEu42eyGWjT10swg4528miI0OHME8iqswnBXSIr66KnpEZ6PXK-mnBOl0LBBz2SymL96Fpot1gd3MXFKbtH3Lfjxz2TM8GDccE0geefwKy1hcZ-LRJaLMfN1BCqot9ckotf2GSIyQFBMiqYlGHAmgYgxws28KgavBjDeJVFu5SrFaCzsUbYwrC9nFrKPYcwQ0EG-A0i4-Cxt2n83XpX_6LAr7TGHTjYqDi1hTWC6vuF5xF5_VZrUX1k_PHFdbO3sSp8rqsuce-7ZvCFDjiCfi4GWZGIDOVlwnXEe-boSK1AjJdjB96QnYcAMbTkA9PEClEwWEqHN4fN8b7I9Z2PwKeJAm5CR6QpV523yAjQn3sEX22MOWHmcWd8RKNM6MisgXZI964Dq9oTN0WcwrEYePUSq5sszPUKAp21eDu7BROX0cRxF7ydunSs1bn4DhGh4CCJiGZJ3EfjQUjy6jnG_XSkt42RIiDRaItIMuyJzV2dXlBxQmRozEra1vMwZGWBDLLd-YOV-9vErAF-Rx-i2Tz3-joM1OpXPvtx3dsaUDcniLVFIDjV0zpv9rRZvnAxrX-0T7fSzdn-DTBydZ46XpCXmi463XzjugthhmtxjREDF5P6TIbkkc-IPMEy2US4ZHrItWzVUzgRlvw-LrP_bJrzZEM9SdX2HQTzuowlFmvi7WxqmiIMOcZjcTCagZ8pgqHdNmEl5Fn_CkpRGTROdPFibzUjxLVLkUK-A4xZVt8DwJCr5-Ntm
' URL: http://www.plantuml.com/plantuml/uml/pLTRRzem57xFh_1ZEaYrvwf3PS1Q9AOYAAhsX4pY1ciXHhRJQhV-zlauCVWIKXusRIz8ETVlVESSszm8YRciTaKalj9oZpdUeRJ0GWobv7HJIJ9DMRcatmbw7srfHb1AULgGAD9MQ2K8dtFsH0k2VaG89PKIJBChD6Db3j_acPHIg6ygvFMCvHFu7g0Fg2GlQCWv_gOrW_W2h74gAIj7hD8-d_7-UgbWb7aVJKj9SiADvnqMMr0tVedwwLbOOWrZNCC0YrvEv4f3YoyEu42eyGWjT10swg4528miI0OHME8iqswnBXSIr66KnpEZ6PXK-mnBOl0LBBz2SymL96Fpot1gd3MXFKbtH3Lfjxz2TM8GDccE0geefwKy1hcZ-LRJaLMfN1BCqot9ckotf2GSIyQFBMiqYlGHAmgYgxws28KgavBjDeJVFu5SrFaCzsUbYwrC9nFrKPYcwQ0EG-A0i4-Cxt2n83XpX_6LAr7TGHTjYqDi1hTWC6vuF5xF5_VZrUX1k_PHFdbO3sSp8rqsuce-7ZvCFDjiCfi4GWZGIDOVlwnXEe-boSK1AjJdjB96QnYcAMbTkA9PEClEwWEqHN4fN8b7I9Z2PwKeJAm5CR6QpV523yAjQn3sEX22MOWHmcWd8RKNM6MisgXZI964Dq9oTN0WcwrEYePUSq5sszPUKAp21eDu7BROX0cRxF7ydunSs1bn4DhGh4CCJiGZJ3EfjQUjy6jnG_XSkt42RIiDRaItIMuyJzV2dXlBxQmRozEra1vMwZGWBDLLd-YOV-9vErAF-Rx-i2Tz3-joM1OpXPvtx3dsaUDcniLVFIDjV0zpv9rRZvnAxrX-0T7fSzdn-DTBydZ46XpCXmi463XzjugthhmtxjREDF5P6TIbkkc-IPMEy2US4ZHrItWzVUzgRlvw-LrP_bJrzZEM9SdX2HQTzuowlFmvi7WxqmiIMOcZjcTCagZ8pgqHdNmEl5Fn_CkpRGTROdPFibzUjxLVLkUK-A4xZVt8DwJCr5-Ntm
' Generated on: 2025-12-16T09:59:25.270612085

@startuml
skinparam classAttributeIconSize 0
hide circle

class UserProfile {
  -userId: Long
  -events: List<LogEvent> = new ArrayList<>()
  -actionCounts: Map<String, Integer> = new HashMap<>()
  --
  +UserProfile(userID: Long)
  +getUserId(): Long
  +getEvents(): List<LogEvent>
  +getActionCounts(): Map<String,Integer>
  +addEvent(event: LogEvent): void
  +updateProfile(log: Parser): void
}

class LogEvent {
  +timestamp: String
  +event: String
  +id: int
}

class HigherProductSearchedProfileGenerator {
  -userProfiles: Collection<UserProfile>
  -nomberOfUsers: int
  --
  +HigherProductSearchedProfileGenerator(userProfile: Collection<UserProfile>, nomberOfUsers: int)
  +generate(): void
}

class FormalReaderProfile {
  ~readAction: int
  --
  +FormalReaderProfile(userId: long, aDD_PRODUCT: int, gET_ALL_PRODUCTS: int, uPDATE_PRODUCT: int, dELETE_PRODUCT: int, gET_PRODUCT_BY_ID: int)
  +getReadAction(): int
}

class FormalHigherPriceProfile {
  -userId: long
  -HigherPriceSearchedProducts: searchedProduct
  --
  +FormalHigherPriceProfile(userId: long, allProductsResearched: List<searchedProduct>)
  +getUserId(): long
  +HigherPriceSearchedProducts(): searchedProduct
  +getHighestPrice(): double
}

abstract class FormalProfile {
  -userId: long
  -ADD_PRODUCT: int
  -GET_ALL_PRODUCTS: int
  -UPDATE_PRODUCT: int
  -DELETE_PRODUCT: int
  -GET_PRODUCT_BY_ID: int
  --
  +FormalProfile(userId: long, aDD_PRODUCT: int, gET_ALL_PRODUCTS: int, uPDATE_PRODUCT: int, dELETE_PRODUCT: int, gET_PRODUCT_BY_ID: int)
  +getUserId(): long
  +setUserId(userId: long): void
  +getADD_PRODUCT(): int
  +setADD_PRODUCT(aDD_PRODUCT: int): void
  +getGET_ALL_PRODUCTS(): int
  +setGET_ALL_PRODUCTS(gET_ALL_PRODUCTS: int): void
  +getUPDATE_PRODUCT(): int
  +setUPDATE_PRODUCT(uPDATE_PRODUCT: int): void
  +getDELETE_PRODUCT(): int
  +setDELETE_PRODUCT(dELETE_PRODUCT: int): void
  +getGET_PRODUCT_BY_ID(): int
  +setGET_PRODUCT_BY_ID(gET_PRODUCT_BY_ID: int): void
}

class searchedProduct {
  -productId: long
  -price: double
  --
  +searchedProduct(productId: long, price: double)
  +getPrice(): double
  +getProductId(): long
}

class FormalWriterProfile {
  ~writeAction: int
  --
  +FormalWriterProfile(userId: long, aDD_PRODUCT: int, gET_ALL_PRODUCTS: int, uPDATE_PRODUCT: int, dELETE_PRODUCT: int, gET_PRODUCT_BY_ID: int)
  +getWriteAction(): int
}

class ReaderProductProfileGenerator {
  -usersProfile: Collection<UserProfile>
  -nomberOfUsers: int
  --
  +ReaderProductProfileGenerator(usersProfile: Collection<UserProfile>, nb: int)
  +generate(): void
}

interface IGenerator {
  ~generate(): void
}

class WriteProductProfileGenerator {
  -usersProfile: Collection<UserProfile>
  -nomberOfUsers: int
  --
  +WriteProductProfileGenerator(usersProfile: Collection<UserProfile>, nb: int)
  +generate(): void
}

UserProfile o-- LogEvent
HigherProductSearchedProfileGenerator ..|> IGenerator
HigherProductSearchedProfileGenerator o-- UserProfile
FormalReaderProfile --|> FormalProfile
FormalHigherPriceProfile *-- searchedProduct
FormalWriterProfile --|> FormalProfile
ReaderProductProfileGenerator ..|> IGenerator
ReaderProductProfileGenerator o-- UserProfile
WriteProductProfileGenerator ..|> IGenerator
WriteProductProfileGenerator o-- UserProfile
@enduml